# hpcgame-2

./: .gitattributes  .gitignore  b.ipynb  compliex-handout.tar  compliex.yaml  fire.yaml  genshin-check.py  genshin-cov.sh  genshin-generate.py  genshin-generate.sh  genshin-prof.sh  genshin-valgrind.sh  genshin-vis.sh  genshin.cpp  genshin.py  genshin.sh  genshin_1.cpp  in-128.data  in-16.data  in-3.data  in-4.data  in-64.data  in_sam.cu  in_sam.data  in_sam.sh  report.dot  report.txt  requirements.txt  writeup.md
B/: b.c  b.md
board/handout/: .gitignore  Makefile  builddeps.sh  play.py  run.sh  vanity-board.cpp  vanity.cpp
compliex/: run.sh
compliex/handin/: CMakeLists.txt  filter.F90  main.cpp
fire/handout/: 1-0.in  1-0.out.std  1-1.in  1-1.out.std  1-2.in  1-2.out.std  1-3.in  1-3.out.std  1-4.out.std  1.out.std  2.in  2.out.std  hostfile.txt  main.cpp  run.sh
gemm/handout/: impl.cu
julia/handout/topk/: bench.jl  impl.jl  jet.jl  prof.jl  test.jl
lcs/: generate.sh  run.sh
lcs/handout/: lcs-template-openmp.cpp  lcs-template.cpp
